[gd_scene load_steps=8 format=3 uid="uid://ds1vvr4x52xy0"]

[ext_resource type="Script" uid="uid://qf30sx53yw14" path="res://characters/basic_character.gd" id="1_foqfl"]
[ext_resource type="Material" uid="uid://cr7xedp6d1j6n" path="res://materials/basic_character_hover.material" id="2_j4eag"]
[ext_resource type="Material" uid="uid://b1bwiswqbdwrc" path="res://materials/basic_character.material" id="2_sqjjh"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mwb40"]
material = ExtResource("2_sqjjh")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_j4eag"]
margin = 0.0
height = 2.1
radius = 0.75

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e5k0y"]
albedo_color = Color(0.761034, 0.881041, 0.99697, 1)
albedo_texture_force_srgb = true
metallic = 1.0

[sub_resource type="TorusMesh" id="TorusMesh_e5k0y"]
material = SubResource("StandardMaterial3D_e5k0y")
inner_radius = 1.0
outer_radius = 0.8
rings = 8
ring_segments = 3

[node name="BasicCharacter" type="CharacterBody3D" groups=["Troops"]]
script = ExtResource("1_foqfl")
_hover_material = ExtResource("2_j4eag")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
debug_enabled = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_mwb40")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
shape = SubResource("CylinderShape3D_j4eag")

[node name="SelectedEffect" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="SelectedEffect"]
mesh = SubResource("TorusMesh_e5k0y")
skeleton = NodePath("../..")

[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
